tests/reference/asr-type_info_array_01-f03aa5f.stderr
semantic error: Array declaration for `type(type_info)` is not supported yet
 --> tests/errors/type_info_array_01.f90:3:5
  |
3 |     type(type_info) :: t(2)
  |     ^^^^^^^^^^^^^^^^^^^^^^^ 
